--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "tsc --declaration",
-    "semantic-release": "semantic-release --branches main",
+    "semantic-release": "semantic-release --branches master",
     "commit": "git-cz"
   },
   "keywords": [],
